--- a/styles/style.css
+++ b/styles/style.css
@@ -41,9 +41,12 @@ strong {
 
 h1 {
     color: teal;
-    background-color: black;
+    /*background-color: black;*/
     width: 207px;
     border: 3px solid black;
+    margin: 0;
+    padding: 20px 0;
+    text-shadow: 3px 3px 1px black;
 }
 
 body {
